@@ -1,3 +1,7 @@
+2011-01-27  Rik  <octave@nomad.inbox5.com>
+
+	* graphics.cc: Improve reset docstring.
+
 2011-01-27  Kai Habel  <kai.habel@gmx.de>
 
 	* DLD-FUNCTIONS/__init_fltk__.cc (__fltk_uigetfile__): Remove here.
